Added Application project

--- a/Blockchain.TestConsole/Blockchain.TestConsole.csproj
+++ b/Blockchain.TestConsole/Blockchain.TestConsole.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,11 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Blockchain.Core\Blockchain.Core.csproj" />
+    <ProjectReference Include="..\Blockchain.Application\Blockchain.Application.csproj" />
   </ItemGroup>
 
 </Project>
